[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmos-cli-explorer"
version = "0.1.0"
description = "A CLI tool for exploring Azure Cosmos DB databases and containers"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]

dependencies = [
    "azure-cosmos>=4.5.0",
    "click>=8.0.0",
    "pyreadline3>=3.5.4",
    "rich>=13.0.0",
]

[project.scripts]
cosmos-cli = "main:cli"

[tool.hatch.build.targets.wheel]
packages = ["."]
